--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,41 @@
+
 <!DOCTYPE html>
 <html lang="en">
+
+<!-- === Additions (safe) === -->
+<link rel="canonical" href="https://updated-portfolio-zeta-virid.vercel.app/" />
+
+<meta name="description" content="3rd-year ECE @ IGDTUW. I build fintech, ML, and embedded systems projects. UCL research intern · TI WiSH’25 1st-prize team." />
+
+<!-- Fix OG fields to your site -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://updated-portfolio-zeta-virid.vercel.app/">
+<meta property="og:image" content="/images/og.png">  <!-- put og.png in public/images -->
+
+<!-- Optional: Twitter preview -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Utkarsha — Portfolio" />
+<meta name="twitter:description" content="3rd-year ECE @ IGDTUW. I build fintech, ML, and embedded systems projects." />
+<meta name="twitter:image" content="/images/og.png" />
+
+<!-- Schema.org: Person -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Utkarsha Vishwakarma",
+  "url": "https://updated-portfolio-zeta-virid.vercel.app/",
+  "sameAs": [
+    "https://github.com/utkarsha032",
+    "https://www.linkedin.com/in/utkarsha-v-818920285"
+  ],
+  "jobTitle": "ECE Undergraduate",
+  "alumniOf": "IGDTUW"
+}
+</script>
+<!-- === /Additions === -->
+
+
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="images/favicon.png" />
@@ -9,8 +45,11 @@
     <meta name="description" content="Personal portfolio made using Reactjs"/>
     <meta property="og:title" content="Utkarsha's portfolio">
     <meta property="og:type" content="Website">
-    <meta property="og:url" content="https://portfolio-devanshsahni.vercel.app/">
+    <!-- <meta property="og:url" content="https://portfolio-devanshsahni.vercel.app/"> -->
     <meta property="og:image" content="https://raw.githubusercontent.com/DevanshSahni/Portfolio/main/public/images/WebsiteImage.png">
+
+    <meta property="og:url" content="https://updated-portfolio-zeta-virid.vercel.app/">
+
 
     <title>Utkarsha</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;400;500;700&display=swap" rel="stylesheet">
@@ -21,15 +60,58 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
     </div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+  
   </body>
 </html>
+
+
+
+<!--
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#0f172a" />
+
+    <title>Utkarsha Vishwakarma — Portfolio</title>
+    <meta name="description" content="3rd-year ECE @ IGDTUW. I build fintech, ML, and embedded systems projects. UCL research intern · TI WiSH’25 1st-prize team." />
+    <link rel="canonical" href="https://updated-portfolio-zeta-virid.vercel.app/" />
+
+    
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Utkarsha Vishwakarma — Portfolio" />
+    <meta property="og:description" content="3rd-year ECE @ IGDTUW. I build fintech, ML, and embedded systems projects. UCL research intern · TI WiSH’25 1st-prize team." />
+    <meta property="og:url" content="https://updated-portfolio-zeta-virid.vercel.app/" />
+    <meta property="og:image" content="/images/og.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Utkarsha Vishwakarma — Portfolio" />
+    <meta name="twitter:description" content="3rd-year ECE @ IGDTUW. I build fintech, ML, and embedded systems projects. UCL research intern · TI WiSH’25 1st-prize team." />
+    <meta name="twitter:image" content="/images/og.png" />
+
+    
+    <link rel="icon" href="/favicon.ico" />
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Utkarsha Vishwakarma",
+      "url": "https://updated-portfolio-zeta-virid.vercel.app/",
+      "sameAs": [
+        "https://github.com/utkarsha032",
+        "https://www.linkedin.com/in/utkarsha-v-818920285"
+      ],
+      "jobTitle": "ECE Undergraduate",
+      "alumniOf": "IGDTUW"
+    }
+    </script>
+
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
+</html>
+-->
